--- a/views/fxml/digital_trainer/custom_control/data_switch.fxml
+++ b/views/fxml/digital_trainer/custom_control/data_switch.fxml
@@ -1,15 +1,15 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
-<fx:root type="javafx.scene.layout.StackPane" xmlns:fx="http://javafx.com/javafx" alignment="CENTER_RIGHT">
-    <Rectangle fx:id="box" width="22" height="10" x="0" y="0" styleClass="switch_toggle_box"/>
-    <StackPane alignment="CENTER_RIGHT">
-        <HBox spacing="5" alignment="CENTER">
-            <Label text="1" styleClass="switch_state"/>
+<?import javafx.scene.layout.VBox?>
+<fx:root type="javafx.scene.layout.StackPane" xmlns:fx="http://javafx.com/javafx" alignment="TOP_CENTER">
+    <Rectangle fx:id="box" width="18" height="38" styleClass="switch_toggle_box"/>
+    <StackPane alignment="TOP_CENTER">
+        <VBox spacing="3" alignment="CENTER">
             <Label text="0" styleClass="switch_state"/>
-        </HBox>
-        <Rectangle fx:id="toggleHandle" width="10" height="10" x="12" y="0" styleClass="switch_toggle"
+            <Label text="1" styleClass="switch_state"/>
+        </VBox>
+        <Rectangle fx:id="toggleHandle" width="18" height="16" styleClass="switch_toggle"
                    mouseTransparent="true"/>
     </StackPane>
 </fx:root>
